@@ -4,5 +4,4 @@ click-plugins
 cligj>=0.5.0
 munch==2.3.2
 setuptools>=49.0
-six==1.16.0
 certifi
